--- a/AI MentAlHealthSupportIndia.html
+++ b/AI MentAlHealthSupportIndia.html
@@ -1,4 +1,30 @@
 <!DOCTYPE html>
+<!--
+Problem Statement:
+In India, where mental health stigma remains high and access to mental health support is limited, 
+there is a critical need for accessible, confidential, and culturally sensitive mental health support.
+Many individuals, especially young adults, face barriers to seeking traditional mental health care
+including cost, availability, and social stigma. This results in delayed intervention and worsening
+of mental health conditions.
+
+This AI-powered mental health chatbot addresses these challenges by:
+1. Early Detection: Using NLP to identify signs of anxiety, depression, and burnout through
+   conversational analysis and validated screening tools (PHQ-9, GAD-7)
+2. Immediate Support: Providing 24/7 access to evidence-based coping strategies and crisis resources
+3. Cultural Sensitivity: Offering support in both English and Hindi, with understanding of
+   Indian cultural contexts and family dynamics
+4. Privacy & Accessibility: Ensuring anonymous, stigma-free support accessible from any device
+5. Professional Integration: Connecting users with mental health professionals when needed,
+   while maintaining clear boundaries about the bot's role as a support tool, not a replacement
+   for professional care
+
+Target Impact:
+- Early intervention for mental health concerns
+- Reduced barriers to seeking mental health support
+- Improved mental health literacy and self-care practices
+- Crisis prevention through timely intervention
+- Better connection to professional mental health resources
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -1393,4 +1419,5 @@ document.querySelectorAll('.message-content').forEach(mc => {
         }
     </script>
 </body>
+
 </html>
